--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -198,8 +198,8 @@ ja:
     pm: 午後
   views:
     pagination:
-      first: "&laquo; 最初"
-      last: "最後 &raquo;"
+      first: "最初"
+      last: "最後"
       next: "次 &rsaquo;"
       previous: "&lsaquo; 前"
       truncate: "&hellip;"
